# PIMS

./: .gitignore  README.local-backup.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_product_recipes.py  003_unit_yield_sulfur.py  004_case_guest_id.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  case.py  crude.py  product.py  product_recipe.py  run.py  stream.py  unit.py
backend/app/routers/: cases.py  crudes.py  guest.py  products.py  solver.py  streams.py  units.py
backend/app/schemas/: case.py  crude.py  product.py  stream.py  unit.py
backend/app/seed/: demo_refinery.py
backend/app/solver/: constraints.py  model_builder.py  results_parser.py
backend/tests/: test_api.py  test_solver.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/cases/: page.tsx
frontend/src/app/cases/[caseId]/: layout.tsx
frontend/src/app/cases/[caseId]/crudes/: page.tsx
frontend/src/app/cases/[caseId]/economics/: page.tsx
frontend/src/app/cases/[caseId]/optimize/: page.tsx
frontend/src/app/cases/[caseId]/products/: page.tsx
frontend/src/app/cases/[caseId]/results/: page.tsx
frontend/src/app/cases/[caseId]/streams/: page.tsx
frontend/src/app/cases/[caseId]/units/: page.tsx
frontend/src/lib/: ag-grid.ts  api.ts  guest.ts  types.ts
