[project]
name = "pims-optimizer-backend"
version = "0.1.0"
description = "Backend for a refinery planning optimizer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.13,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "pulp>=2.8,<3",
    "highspy>=1.7,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "httpx>=0.27,<1",
    "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 99
target-version = "py311"
